SF Primes/src/objects/Employee_Hardware_Assets__c.object
<CustomObject>
    <description>Hardware assets for specific sales rep</description>
    <fields>
        <fullName>Asset_End_Date__c</fullName>
        <label>Asset End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <label>Asset Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asset_Start_Date__c</fullName>
        <label>Asset Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Hardware Assets</relationshipLabel>
        <relationshipName>R00N40000001lhGPEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hardware_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hardware Asset</label>
        <referenceTo>Hardware_Asset__c</referenceTo>
        <relationshipLabel>Employee Hardware Assets</relationshipLabel>
        <relationshipName>R00N40000001lt0HEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPX_ADPHardware_CreateDate__c</fullName>
        <label>SPX Asset Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_ADPHardware_ID__c</fullName>
        <label>SPX ADPHardware ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Link__c</fullName>
        <formula>hyperlink(&quot;http://support.dell.com/support/topics/global.aspx/support/my_systems_info/details?c=us&amp;cs=2684&amp;l=en&amp;s=pub&amp;servicetag=&quot; &amp; Serial_Number__c , Serial_Number__c)</formula>
        <label>Serial Number (Link)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Notes__c</fullName>
        <description>Notes associated to this specific piece of equipment</description>
        <label>Serial Number Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Employee Hardware Assets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Hardware_Asset__c</columns>
        <columns>Asset_Number__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Asset_Start_Date__c</columns>
        <columns>Asset_End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lenovo_T410</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>Lenovo T410</value>
        </filters>
        <label>Lenovo T410</label>
    </listViews>
    <listViews>
        <fullName>Lenovo_X201</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>Lenovo X201</value>
        </filters>
        <label>Lenovo X201</label>
    </listViews>
    <listViews>
        <fullName>MapPoint_Licensing</fullName>
        <columns>NAME</columns>
        <columns>Asset_Number__c</columns>
        <columns>Employee_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>MapPoint 2010</value>
        </filters>
        <label>MapPoint Licensing</label>
    </listViews>
    <listViews>
        <fullName>MapPoint_Licensing_Inventory</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Asset_Number__c</columns>
        <columns>Employee_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>MapPoint 2010</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>INVENTORY</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>Retired</value>
        </filters>
        <label>MapPoint Licensing Inventory</label>
    </listViews>
    <listViews>
        <fullName>Recent_Adds</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Hardware_Asset__c</columns>
        <columns>Asset_Number__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Asset_Start_Date__c</columns>
        <columns>Asset_End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recent Adds</label>
    </listViews>
    <listViews>
        <fullName>Video_Codecs</fullName>
        <booleanFilter>1 or 2 OR 3 OR 4</booleanFilter>
        <columns>Employee_Name__c</columns>
        <columns>Hardware_Asset__c</columns>
        <columns>Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>LifeSize Team 220</value>
        </filters>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>Polycom HDX8000 Series</value>
        </filters>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>Polycom HDX7000 Series</value>
        </filters>
        <filters>
            <field>Hardware_Asset__c</field>
            <operation>equals</operation>
            <value>Polycom VSX7000 Series</value>
        </filters>
        <label>Video Codecs</label>
    </listViews>
    <listViews>
        <fullName>Video_Conference_Rooms</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Employee_Name__c</columns>
        <columns>Hardware_Asset__c</columns>
        <columns>Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>Video</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>Boardroom</value>
        </filters>
        <label>Video Conference Rooms</label>
    </listViews>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Emp Hardware Assets</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Hardware Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>